--- a/Assignment30/index.html
+++ b/Assignment30/index.html
@@ -59,7 +59,9 @@
         }
         .img{
             height: 170px;
-           width: 230px;
+           width: 240px ;
+           align-items: center;
+
         }
         
     </style>
